--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Music Player",
-  "name": "xbotpc's Music Player",
+  "short_name": "Frontend Template",
+  "name": "xbotpc's Frontend Template",
   "icons": [
     {
       "src": "audiotrack.svg",
