--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "classnames": "^2.3.1",
+    "dotenv": "^10.0.0",
     "eslint": "^7.28.0",
     "eslint-plugin-react": "^7.24.0",
     "gh-pages": "^3.2.0",
